# hardbopengine

./: .clang-format  .gitignore  .gitmodules  .module.config  .project.config  AGENTS.md  AIProgress.md  CMakeLists.txt  CodingStandardsChecklist.md  JOURNAL.md  LICENSE  Memory.md  README.md  ReviewNote.txt  ReviewNoteSummary.txt  batch_ai_prompt.bat  batch_ai_prompt.sh  build.bat  build.sh  generate_cmake_files.bat  generate_cmake_files.sh  graph.dot  run.bat  run.sh  test_output.txt
Applications/: .module.config  CMakeLists.txt  ReviewNote.txt
Applications/EngineTest/: .module.config  CMakeLists.txt  TestMain.cpp  dependencies.txt  dependency.txt
Applications/GraphicTest/: .module.config  CMakeLists.txt  Main.cpp  dependencies.txt
Applications/TriangleExample/: .module.config  CMakeLists.txt  DODTypes.h  Main.cpp  MinimalVulkanRenderer.cpp  MinimalVulkanRenderer.h  README.md  SoftwareRenderer.cpp  SoftwareRenderer.h  TriangleExampleTest.cpp  TriangleRenderTest.cpp  customCMake.txt  dependency.txt  include.txt
Applications/VulkanExample/: .module.config  CMakeLists.txt  Main.cpp
Applications/VulkanTest/: .module.config  CMakeLists.txt  Main.cpp
Applications/VulkanTriangle/: .module.config  CMakeLists.txt  VulkanTriangle.cpp
Applications/WindowExample/: .module.config  CMakeLists.txt  Main.cpp  dependency.txt
Code/: CMakeLists.txt
Code/Game/: CMakeLists.txt  GameObject.cpp
Code/Math/: AABB.cpp  AABB.h  AffineTransform.cpp  AffineTransform.h  CMakeLists.txt  CoordinateOrientation.h  EuclidSpace.cpp  EuclidSpace.h  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  MatrixCommonImpl.inl  OBB.cpp  OBB.h  Quaternion.cpp  Quaternion.h  RigidTransform.cpp  RigidTransform.h  Transform.cpp  Transform.h  UniformTransform.cpp  UniformTransform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  VectorCommonImpl.inl
Code/Render/: CMakeLists.txt  MeshData.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  dependencies.txt
Code/System/: Allocator.cpp  Allocator.h  Array.cpp  Array.h  CMakeLists.txt  CommonUtil.cpp  CommonUtil.h  Component.h  ComponentSystem.cpp  ComponentSystem.h  Constants.h  Debug.h  DoubleLinkedList.h  Exception.h  HardbopAllocator.cpp  HardbopAllocator.h  Letter.h  LinkedList.cpp  MathUtil.h  Optional.h  PoolAllocator.cpp  PoolAllocator.h  Shareable.h  StackAllocator.cpp  StdUtil.h  String.cpp  String.h  System.h  TestCase.cpp  TestCase.h  TestEnv.h  Time.cpp  Time.h  Types.h  Vector.cpp  Vector.h
Code/Test/: CMakeLists.txt  TestMain.cpp  dependencies.txt
Engine/: .module.config  CMakeLists.txt  CodingStandards.cpp  CodingStandards.h  Main.cpp
Engine/Config/: BuildConfig.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigParam.cpp  ConfigParam.h  ConfigSystem.cpp  ConfigSystem.h  EngineConfig.cpp  EngineConfig.h  ReviewNote.txt
Engine/Container/: Array.cpp  Array.h  AtomicStackView.cpp  AtomicStackView.h  BoundedPriorityQueue.cpp  BoundedPriorityQueue.h  CMakeLists.txt  Deque.cpp  Deque.h  HashMap.cpp  HashMap.h  LinkedList.cpp  LinkedList.h  Map.cpp  Map.h  Queue.cpp  Queue.h  ReviewNote.txt  RingQueue.cpp  RingQueue.h  Vector.cpp  Vector.h
Engine/Core/: CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  CommonUtil.h  Component.cpp  Component.h  ComponentState.h  ComponentSystem.cpp  ComponentSystem.h  Constants.h  Debug.cpp  Debug.h  Exception.h  MainThreadTaskQueue.cpp  MainThreadTaskQueue.h  RangedTask.cpp  RangedTask.h  ReviewNote.txt  Runnable.h  ScopedLock.cpp  ScopedLock.h  ScopedTime.h  SystemStatistics.cpp  SystemStatistics.h  Task.cpp  Task.h  TaskHandle.cpp  TaskHandle.h  TaskStream.cpp  TaskStream.h  TaskStreamAffinity.cpp  TaskStreamAffinity.h  TaskSystem.cpp  TaskSystem.h  Time.cpp  Time.h  Types.h
Engine/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  ReviewNote.txt  dependencies.txt
Engine/HSTL/: CMakeLists.txt  HString.cpp  HString.h  HUnorderedMap.cpp  HUnorderedMap.h  HVector.h  ReviewNote.txt
Engine/Log/: CMakeLists.txt  LogLevel.h  LogLine.cpp  LogLine.h  LogUtil.cpp  LogUtil.h  Logger.cpp  Logger.h  PrintArgs.h  ReviewNote.txt
Engine/Math/: .module.config  AABB.cpp  AABB.h  CMakeLists.txt  CoordinateOrientation.h  ImportanceResampling.h  ImportanceSampling.cpp  MathUtil.cpp  MathUtil.h  Matrix.h  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  MatrixCommonImpl.inl  MonteCarloIntegrator.cpp  MonteCarloIntegrator.h  OBB.cpp  OBB.h  Quaternion.cpp  Quaternion.h  ReviewNote.txt  RigidTransform.cpp  RigidTransform.h  StratifiedSampling.cpp  StratifiedSampling.h  Transform.cpp  Transform.h  UniformTransform.cpp  UniformTransform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  VectorCommonImpl.inl
Engine/Memory/: AllocStats.cpp  AllocStats.h  AllocatorID.h  AllocatorProxy.h  AllocatorScope.cpp  AllocatorScope.h  CMakeLists.txt  DefaultAllocator.cpp  DefaultAllocator.h  InlineMonotonicAllocator.cpp  InlineMonotonicAllocator.h  InlinePoolAllocator.cpp  InlinePoolAllocator.h  Memory.h  MemoryManager.cpp  MemoryManager.h  MonotonicAllocator.cpp  MonotonicAllocator.h  MultiPoolAllocator.cpp  MultiPoolAllocator.h  MultiPoolAllocatorConfig.cpp  MultiPoolAllocatorConfig.h  MultiPoolConfigCache.cpp  MultiPoolConfigCache.h  Optional.cpp  Optional.h  PoolAllocator.cpp  PoolAllocator.h  PoolConfig.h  PoolConfigUtil.cpp  PoolConfigUtil.h  ReviewNote.txt  ScopedAllocator.h  Shareable.h  StackAllocator.cpp  StackAllocator.h  SystemAllocator.cpp  SystemAllocator.h  ThreadSafeMultiPoolAllocator.cpp  ThreadSafeMultiPoolAllocator.h
Engine/OSAL/: .module.config  Application.cpp  Application.h  CMakeLists.txt  Directory.cpp  Directory.h  File.h  IWindow.h  Intrinsic.h  LinuxAbstractLayer.cpp  LinuxApplication.cpp  LinuxApplication.h  LinuxDebug.cpp  LinuxFileHandle.cpp  LinuxFileOpenMode.cpp  LinuxInputOutput.cpp  LinuxMapSyncMode.cpp  LinuxMemory.cpp  LinuxProtectionMode.cpp  LinuxWindow.h  (+44 more)
Source/: .clang-format  .module.config  CMakeLists.txt  Engine.cpp  Engine.h  Main.cpp  dependencies.txt
(+404 files in other folders)
